// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons/<ino-fab> EdgePositions smoke-test 1`] = `
<div id="root-inner">
  <div class="story-fab">
    <div class="ino-fab-variants">
      <ino-fab label="top-left"
               edge-position="top-left"
      >
        <ino-icon slot="icon-leading"
                  icon="add"
        >
        </ino-icon>
      </ino-fab>
      <ino-fab label="top-right"
               edge-position="top-right"
      >
        <ino-icon slot="icon-leading"
                  icon="add"
        >
        </ino-icon>
      </ino-fab>
      <ino-fab label="bottom-right"
               edge-position="bottom-right"
      >
        <ino-icon slot="icon-leading"
                  icon="add"
        >
        </ino-icon>
      </ino-fab>
      <ino-fab label="bottom-left"
               edge-position="bottom-left"
      >
        <ino-icon slot="icon-leading"
                  icon="add"
        >
        </ino-icon>
      </ino-fab>
      <ino-fab label="none"
               edge-position="none"
      >
        <ino-icon slot="icon-leading"
                  icon="add"
        >
        </ino-icon>
      </ino-fab>
    </div>
  </div>
</div>
`;

exports[`Buttons/<ino-fab> Playground smoke-test 1`] = `
<div id="root-inner">
  <div class="story-fab">
    <ino-fab class="customizable-fab"
             disabled="false"
             edge-position="top-left"
             extended="false"
             label="Label"
             mini="false"
             tooltip-placement="right"
    >
      <ino-icon slot="icon-leading"
                icon="add"
      >
      </ino-icon>
    </ino-fab>
  </div>
</div>
`;

exports[`Buttons/<ino-fab> Variants smoke-test 1`] = `
<div id="root-inner">
  <div class="story-fab">
    <div class="ino-fab-variants">
      <ino-fab tooltip-placement="none"
               label="Default Fab"
      >
        <ino-icon slot="icon-leading"
                  icon="add"
        >
        </ino-icon>
      </ino-fab>
      <ino-fab mini
               label="Mini Fab"
      >
        <ino-icon slot="icon-leading"
                  icon="add"
        >
        </ino-icon>
      </ino-fab>
      <ino-fab extended
               label="Extended Button"
      >
        <ino-icon slot="icon-leading"
                  icon="add"
        >
        </ino-icon>
      </ino-fab>
      <ino-fab disabled
               label="Disabled Button"
      >
        <ino-icon slot="icon-leading"
                  icon="add"
        >
        </ino-icon>
      </ino-fab>
    </div>
  </div>
</div>
`;
